develop: optimize strings and small refactor
- develop: switch from std::pair<...> to Glue struct
- develop: move replaceAll to syntax.cpp/h
- develop: rename appendConstantString to appendRawString, move to syntax.cpp/h, expect callee replaceAll instead
- develop: rename AstGlobalTracking -> AstTracking
- develop: track how many times strings are used in order to give naming
  priority to most used strings
- develop: calculate cost for all strings and optimize string usage
  if profitable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(Minifier.CLI)
 target_sources(Minifier PRIVATE
     src/minifier.cpp
     src/syntax.cpp
+    src/tracking.cpp
 )
 
 target_sources(Minifier.CLI PRIVATE
