--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # clangd
 project(Minifier LANGUAGES CXX)
 add_subdirectory(luau)
 add_subdirectory(RE-flex)
+add_subdirectory(abseil-cpp)
 add_library(Minifier STATIC)
 add_executable(Minifier.CLI)
 
 target_sources(Minifier PRIVATE
+    src/minifier.h
+    src/syntax.h
+    src/tracking.h
+
     src/minifier.cpp
     src/syntax.cpp
     src/tracking.cpp
@@ -38,6 +43,7 @@ target_compile_features(Minifier PUBLIC cxx_std_20)
 target_compile_options(Minifier PRIVATE ${OPTIONS})
 target_include_directories(Minifier PUBLIC RE-flex/include)
 target_link_libraries(Minifier PRIVATE Luau.Ast ReflexLibStatic)
+target_link_libraries(Minifier PUBLIC absl::string_view absl::flat_hash_map)
 
 target_compile_features(Minifier.CLI PUBLIC cxx_std_20)
 target_compile_options(Minifier.CLI PRIVATE ${OPTIONS})
