feat(dag): handle statements
- develop: trackCall -> trackCallWithBlock
- develop: add pushChild and pushStatement to Block class
- develop: refactor Block, BlockType, etc. to Block class
- develop: use RTTI to encode class type info, nearly identical macro to LUAU_RTTI(class)
- develop: add optional statement metadata
- develop: add unfinished LocalInfo type which will eventually be used
  to infer local types in the graph

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,14 @@ target_sources(Minifier PRIVATE
     src/syntax.h
     src/tracking.h
 
+    src/graph/rtti.hpp
+    src/graph/block.hpp
+    src/graph/statement.hpp
+
+    src/graph/rtti.cpp
+    src/graph/block.cpp
+    src/graph/statement.cpp
+
     src/minifier.cpp
     src/syntax.cpp
     src/tracking.cpp
